# team1

./: .dockerignore  .env.example  .gitignore  Kubernetes_Presentation.pptx  README.md  docker-compose.yml
core_api/: .coverage  Dockerfile  README.md  alembic.ini  entrypoint.sh  logger.py  main.py  pyproject.toml  pytest.ini  rabbitmq.py  schemas.py
core_api/alembic/: env.py
core_api/app/: __init__.py  logger.py  main.py
core_api/app/api/: dependencies.py
core_api/app/core/: config.py  lifespan.py
core_api/app/db/: __init__.py  base.py  config.py  models.py  session.py
core_api/app/middleware/: error_handler.py
core_api/app/rabbitmq/: __init__.py  client.py
core_api/app/repositories/: __init__.py  generation_result.py  user.py
core_api/app/services/: generation_service.py  logging_service.py  user_service.py
core_api/extract_files/: extract_text_from_file.py
core_api/scripts/: create_migration.sh  init_db.sh  reset_db.sh
core_api/tests/: README.md  __init__.py  conftest.py  test_health.py  test_job_description.py  test_models.py  test_questions.py  test_repositories.py  test_resume.py
frontend/: Dockerfile  logger.py  main.py  pyproject.toml
frontend/app/: streamlit_app.py
frontend/app/.streamlit/: config.toml
frontend/app/core/: config.py
frontend/app/pages/: home.py  job_description.py  profile.py  questions_generation.py  resume_evaluation.py
frontend/app/services/: auth_client.py  job_description.py  question_generation.py  resume_evaluation.py
frontend/app/utils/: __init__.py  cookie_utils.py  file_utils.py  pdf_export.py
job_description_service/: Dockerfile  get_report.py  main.py  pyproject.toml  runner.py  worker.py
job_description_service/pipelines/format_job_description/: get_flyer_format.py  get_media_format.py  runner.py  (+1 more)
job_description_service/utils/: create_llm_with_retries.py  logger.py
question_generation_service/: Dockerfile  pyproject.toml  runner.py  worker.py
question_generation_service/pipelines/: generate_experience_block.py  generate_motivation_block.py  generate_personal_block.py
question_generation_service/utils/: create_llm_with_retries.py  logger.py  prepare_salary_evaluation_report.py  prepare_skills_evaluation_report.py  prepare_work_evaluation_report.py
resume_evaluation_service/: Dockerfile  main.py  pyproject.toml  runner.py  worker.py
resume_evaluation_service/utils/: clean_text.py  create_llm_with_retries.py
(+269 files in other folders)
