[project]
name = "core-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.5"
dependencies = [
    "aio-pika>=9.5.7",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "pymupdf>=1.26.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "pydantic-settings>=2.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.35.0",
]
